# lootbox

./: .gitignore  README.md
loot/: Cargo.toml  README.md  pyproject.toml
loot/src/: add.rs  app.rs  bundle.rs  commands.rs  config.rs  default_requirements.toml  dependencies.rs  install.rs  main.rs  new.rs  python_dependency_resolver.rs  resolve_dependencies.py  run.rs  utils.rs  versions.rs
loot/src/default_files/: default_main.py  default_requirements.toml
