[package]
name = "loot"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
directories = "5.0.1"
inline_colorization = "0.1.6"
pep440_rs = "0.6.6"
pyo3 = { version = "0.22.2", features = ["auto-initialize"]}
reqwest = "0.12.5" 
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.2", features = ["full"] }
tokio-macros = "2.4.0"
toml = "0.8.14"
