[package]
name = "loot"
version = "1.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
directories = "5.0"
dotenv = "0.15.0"
inline_colorization = "0.1"
pep440_rs = "0.7"
pyo3 = { version = "0.22.5", features = ["auto-initialize"]}
reqwest = "0.12.9" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41", features = ["full"] }
tokio-macros = "2.4.0"
toml = "0.8.14"
